Add local cenode.js

--- a/public/index.html
+++ b/public/index.html
@@ -226,7 +226,7 @@
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
   <!-- CENode -->
-  <script src="http://cenode.io/cenode.js"></script>
+  <script src="js/cenode.js"></script>
 
   <!-- Sherlock Sam -->
   <!-- <script src="components/sherlock-sam/chat.js"></script> -->
